<resources>
    <string name="app_name">KFC</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_Offer">Offer</string>
    <string name="menu_About">About</string>

    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="head_title2">KFC</string>
    <string name="aboutText1">دجاج كنتاكى</string>
    <string name="aboutText2">يعتبر دجاج كنتاكى واحد من أكبر سلاسل المطاعم فى العالم واللى دايما بيتميز بجودة الأكل و المذاق الجميل جدا و السلسلة ديه بتختص فى الوجبات السريعة خصوصا الدجاج المقلى ومقرها فى مدينة لويفل بولاية كنتاكى بأمريكا وتم تأسيسها فى 24 سبتمبر سنة 1952 ودلوقتى معا نجاح السلسلة وزيادة شهرتها بقى فيه فروع فى كل مكان فى العالم والنهاردة هنوضح أماكن فروع مصر بالتفصيل وكمان مواعيد العمل</string>
    <string name="aboutText3">فروع القاهرة:</string>
    <string name="aboutText4">
        الزمالك \n
49 أ شارع ابوالفدا - الزمالك - القاهره - مصر \n
التليفونات: 02-27369805
        \n
المنيل \n
9 شارع السرايا، تقاطع شارع المنيل
        \n
10:00 AM - 3:00 AM
        \n
37 شارع الروضة، متفرع من شارع عبد الرحمن البرقوقي
        \n
10:00 AM - 3:00 AM
        \n
\n
المهندسين
\n
128 شارع السودان
\n
10:00 AM - 3:00 AM
\n
47 شارع البطل احمد عبد العزيز
\n
10:00 AM - 3:00 AM
\n
425 شارع السودان
\n
10:00 AM - 3:00 AM
\n
1 ميدان لبنان
\n
10:00 AM - 3:00 AM
        \n
\n
الدقي
\n
52 شارع محيى الدين أبو العز
\n
11:00 AM - 3:00 AM
\n
(فرع الرعاية المجتمعية) 9 شارع السد العالى متفرع من ميدان فيني
\n
10:00 AM - 3:00 AM
\n
\n

الهرم
\n
2 شارع اللبيني، متفرع من شارع السيسي، المريوطية، بجوار قصر مينا
\n
10:00 AM - 3:00 AM
\n
ميدان أبو الهول السياحي ، امام عرض الصوت والضوء
\n
10:00 AM - 3:00 AM
\n
164 شارع الهرم
\n
10:00 AM - 3:00 AM
\n
417 شارع الهرم
\n
10:00 AM - 3:00 AM
\n
\n

فيصل
\n
314 شارع فيصل
\n
10:00 AM - 3:00 AM
\n
43 شارع فيصل
\n
10:00 AM - 3:00 AM
\n
\n

الجيزة
\n
37 شارع الجيزة
\n
10:00 AM - 3:00 AM
\n
\n

القاهرة الجديدة
\n
امريكانا بلازا ، شارع التسعين
\n
10:00 AM - 3:00 AM
\n
فيوتشر مول، التجمع الثالث
\n
10:00 AM - 3:00 AM
\n
سيلفر ستار مول، شارع اخناتون، حى 1
\n
10:00 AM - 3:00 AM
\n
كايرو فستيفال سيتي، القاهرة الجديدة ، مجمع المطاعم
\n
10:00 AM - 3:00 AM
\n
فيوتشر مول التجمع الثالث - القاهره الجديدة
\n
\n

وسط البلد
\n
9 ميدان التحرير
\n
10:00 AM - 3:00 AM
\n
32 طلعت حرب
\n
10:00 AM - 3:00 AM
\n
21 شارع عبدالخالق ثروت - وسط البلد
\n
التليفونات: 02-23958854
\n
10:00 AM - 3:00 AM
\n
وسط البلد : 5 شارع محمد بك عز العرب
\n
التليفونات: 02-27920406 - 02-27921992 - 02-27921993 - 02-27921994
\n
وسط البلد : مول طلعت حرب - وسط البلد
\n
التليفونات: 02-25747902
\n
\n
        العباسية
\n
العباسيه : 115 شارع مصر و السودان - حدائق القبه
\n
التليفونات: 02-26846661
\n
العباسيه : 16 شارع السرجانى - العباسيه
\n
التليفونات: 02-24873145 - 02-26829080
\n
\n

رمسيس
\n
رمسيس : 9 ميدان التحرير - وسط البلد
\n
التليفونات: 02-25772707 - 02-25772708 -
\n
رمسيس : داخل اركاديا مول - رمله بولاق
\n
التليفونات: 02-25745391 - 02-25745637
\n
\n

مدينة نصر
\n
28 شارع مصطفى النحاس - مدينه نصر
\n
التليفونات: 02-22736675 - 02-22747521 -
\n
10:00 AM - 3:00 AM
\n
1 بلوك 21 ، شارع احمد الزمر
\n
10:00 AM - 3:00 AM
\n
108 شارع حسن المأمون ، امام النادى الاهلى
\n
10:00 AM - 3:00 AM
\n
سيتي ستارز، شارع عمر بن الخطاب، المرحلة 2، مجمع المطاعم بيراميدز
\n
10:00 AM - 3:00 AM
\n
59 شارع عين شمس
\n
10:00 AM - 3:00 AM
\n
 30 شارع الطيران - مدينه نصر
\n
التليفونات: 02-24045187 -
\n
10:00 AM - 3:00 AM
\n
السراج مول ، متفرع من شارع مكرم عبيد
\n
10:00 AM - 3:00 AM
\n
جنينه مول ، شارع البطراوي متفرع من عباس العقاد
\n
10:00 AM - 3:00 AM
\n
مول طيبة ، 75 شارع النصر
\n
10:00 AM - 3:00 AM
\n
سيتي ستارز، شارع عمر بن الخطاب، المرحلة 1، مجمع المطاعم زودياك
\n
10:00 AM - 3:00 AM
\n
 9 شارع عباس العقاد - مدينه نصر
\n
التليفونات: 02-22617709 -
\n
10:00 AM - 3:00 AM
\n
 سيتى سنتر 3 شارع مكرم عبيد - مدينه نصر
\n
التليفونات: 02-22708402 -
\n
10:00 AM - 3:00 AM
\n
 منطقه المطاعم - مدينه الرحاب - مدينه نصر
\n
التليفونات: 02-26922761 -
\n
125 شارع حسن مأمون - مدينه نصر
\n
 شارع عطيه الصوالحى - مدينه نصر
\n
تليفونات: 02-22870737 - 02-22870798
\n
\n

النزهة
\n
1 شارع عبدالحميد بدوى - مصر الجديده
\n
التليفونات: 02-26241292 -
\n
41 شارع عبدالحميد بدوى - مصر الجديده
\n
التليفونات: 02-26241291 -
\n
 شارع المؤرخ محمد رفعت - مصر الجديده
\n
التليفونات: 02-26224272
\n
\n

شبرا
\n
16 شارع دوليتان ، امام شارع الخلفاوى
\n
10:00 AM - 3:00 AM
\n
التليفونات: 02-22073985 - 02-22074637
\n
196 شارع الترعة البولاقية
\n
10:00 AM - 3:00 AM
\n
16 شارع السرجانى متفرع من شارع احمد سعيد
\n
10:00 AM - 3:00 AM
\n
127 شارع شبرا
\n
10:00 AM - 3:00 AM
\n
التليفونات: 02-24319341
\n
شبرا الخيمة : 15 مايو الملف، بهتيم، قسم ثان شبرا الخيمة
\n
        \n
المعادي
\n
24 شارع 151 - برج الجزيرة 2 - كورنيش المعادي أمام أكاديمية السادات للعلوم الإدارية
\n
10:00 AM - 3:00 AM
\n
9 على 2 شارع النصر، المعادى الجديدة
\n
التليفونات: 02-25168423 - 02-27544326
\n
10:00 AM - 3:00 AM
\n
المعراج العلوى
\n
10:00 AM - 3:00 AM
\n
المعادي سيتي سنتر، الطريق الدائرى، مجمع المطاعم
\n
10:00 AM - 3:00 AM
\n
 93 شارع 9 - المعادى
\n
التليفونات: 02-23597604 -
\n
10:00 AM - 3:00 AM
\n
طريق القطاميه - المعادى
\n
التليفونات: 02-25204419
\n
مصر الجديدة
\n
61 شارع السيد الميرغنى - مصر الجديده
\n
التليفونات: 02-22906722 - 02-22906742 - 02-24143701
\n
10:00 AM - 3:00 AM
\n
4 شارع السيد الميرغنى، روكسي
\n
10:00 AM - 3:00 AM
\n
48 شارع الخليفة المأمون، منشية البكرى
\n
10:00 AM - 3:00 AM
\n
41 شارع عبدالحميد بدوى - مصر الجديده
\n
التليفونات: 02-26241376 -
\n
10:00 AM - 3:00 AM
\n
63 شارع عثمان بن عفان - مصر الجديده
\n
التليفونات: 02-24177760 - 02-24177780 - 02-24177790
\n
10:00 AM - 3:00 AM
\n
68 شارع محمد رفعت، النزهة الجديدة
\n
10:00 AM - 3:00 AM
\n
115 شارع سليم الاول - الزيتون
\n
التليفونات: 02-26321389 -
\n
10:00 AM - 3:00 AM
\n
10 شارع الثوره - مصر الجديده
\n
التليفونات: 02-24178122 - 02-24179169 - 02-24199123 -
\n
10:00 AM - 3:00 AM
\n
 97 شارع الحجاز - مصر الجديده
\n
التليفونات: 02-26356028
\n
10:00 AM - 3:00 AM
\n
 13 شارع الخليفه المأمون - مصر الجديده
\n
التليفونات: 02-26903479 -
\n
 16 شارع السيد الميرغنى - مصر الجديده
\n
التليفونات: 02-22563381 -
\n
\n

</string>
    <string name="aboutText5">فروع الاسكندرية :</string>
    <string name="aboutText6">
        العنوان: 238 رشدي، مصطفى كامل وبولكلي، قسم سيدى جابر، الإسكندرية
\n
العنوان: فيكتور ايمانويل الثالث، Izbat Saed، قسم سيدى جابر، الإسكندرية
\n
العنوان: 10 ش كنيسة الاقباط، محطة الرمل، قسم مينا البصل، الإسكندرية يعمل على مدار 24
\n
العنوان: 64A طريق الجيش، الإبراهيمية بحري وسيدي جا، قسم باب شرقي، الإسكندرية
\n
العنوان: جميلة بو حريد، السيوف قبلي (تشمل عزبة دربان، قسم المنتزه، الإسكندرية
\n
العنوان: 18 شارع جليس ، المحطة رمل، المسلة شرق، قسم العطارين، الإسكندرية
\n
العنوان: طريق 14 مايو، ميدان سموحة، الإسكندرية
\n
العنوان: 54 شعراوي، سان ستفانو، قسم الرمل، الإسكندرية
\n
العنوان: طريق الجيش، سيدي بشر بحري، قسم المنتزه، الإسكندرية
\n
العنوان: البيطاش، البيطاش غرب، قسم الدخيلة، الإسكندرية
\n
العنوان: شارع اسكندر ابراهيم من، متفرع من شارع جمال عبد الناصر، قسم المنتزه
\n
العنوان: ملاك‎ حفني، العمراوي، قسم المنتزه، الإسكندرية
\n
العنوان: الهانوفيل، العجمي البحري، قسم الدخيلة، الإسكندرية
\n
العنوان: 64 27، الذراع البحري، قسم العامرية، الإسكندرية
\n
العنوان: طريق الإسكندرية - مرسى مطروح، الذراع البحري، قسم برج العرب، الإسكندرية
\n
العنوان: الساحل الشمالى, طريق اسكندرية مطروح الصحراوى
\n
الهاتف: 03 3742067
\n
العنوان: قطاع الطريق الصحراوي، قسم العامرية، الإسكندرية
\n
العنوان: الساحل الشمالى, طريق اسكندرية مطروح الصحراوى
\n
الهاتف: 03 4104437
\n
العنوان: 129 - طريق اسكندرية مطروح الصحراوى، سيدى عبد الرحمن، الساحل الشمالى داخل ام بوروم مول ، طريق الاسكندرية - مرسى مطروح ، مركز العلمين ، مطروح
\n
العنوان: 9 حسين باشا عاصم، المزار، قسم الجمرك، الإسكندرية
\n
\n

كارفور
\n
الإسكندرية سيتي سنتر، مجمع المطاعم
\n
10:00 AM - 3:00 AM
\n
\n

سموحة
\n
جرين بلازا مول ، طريق 14 مايو
\n
10:00 AM - 3:00 AM
\n
76 ميدان فيكتور ايمانويل
\n
10:00 AM - 3:00 AM
\n
\n

ميامي
\n
643 طريق الجيش. متفرع من شارع خالد بن الوليد
\n
10:00 AM - 3:00 AM
\n
56 شارع اسكندر ابراهيم
\n
10:00 AM - 3:00 AM
\n
\n

المنتزة
\n
رويال بلازا مول
\n
10:00 AM - 3:00 AM
\n
\n

لوران
\n
426 طريق الجيش تقاطع شارع شعراوي
\n
10:00 AM - 3:00 AM
\n
\n

محطة الرمل
\n
1 شارع صفية زغلول امتداد شارع سعد زغلول
\n
10:00 AM - 3:00 AM
\n
10 شارع كنيسة الاقباط
\n
10:00 AM - 3:00 AM
\n
\n

رشدي
\n
238 طريق الجيش
\n
10:00 AM - 3:00 AM
\n
\n

العجمي
\n
داخل قرية 6 اكتوبر، شارع 30
\n
10:00 AM - 3:00 AM
\n
ش شهر العسل ، البيطاش
\n
10:00 AM - 3:00 AM
\n
\n

سان ستيفانو
\n
سان ستيفانو جراند بلازا مول، منطقة المطاعم، طريق الجيش.
\n
10:00 AM - 3:00 AM
        \n
\n
    </string>
    <string name="aboutText7">فروع أخرى :</string>
    <string name="aboutText8">أسوان
\n
العنوان: اسوان, الكورنيش
\n
الهاتف: 0114 360 0265
\n
\n

حلوان
\n
38 شارع راغب باشا
\n
10:00 AM - 3:00 AM
\n
\n

السيدة زينب
\n
5 شارع شارع المبتديان
\n
10:00 AM - 3:00 AM
\n
\n

حدائق القبة
\n
115 شارع مصر والسودان
\n
10:00 AM - 3:00 AM
\n
263 شارع ترعة الجبل، الزيتون
\n
10:00 AM - 3:00 AM
\n
القاهره - القبه : 4 شارع السيد الميرغنى - مصر الجديده
\n
تليفونات: 02-22563380
\n
القبه : 48 شارع الخليفه المأمون - مصر الجديده
\n
التليفونات: 02-22569949
\n
\n

مدينة العبور
\n
جولف سيتى مول، شارع مبارك
\n
10:00 AM - 3:00 AM
\n
شيخ زايد
\n
هايبر وان، مدينة الشيخ زايد
\n
10:00 AM - 3:00 AM
\n
امريكانا بلازا ، امتداد محور 26 يوليو
\n
10:00 AM - 3:00 AM
\n
\n

مساكن شيراتون
\n
صن سيتي مول، طريق الاوتوستراد
\n
10:00 AM - 3:00 AM
\n
1 عمارات مصر للتعمير
\n
10:00 AM - 3:00 AM
\n
\n

6 أكتوبر
\n
محطة بنزين موبيل ، طريق الواحات ، امام دريم لاند
\n
10:00 AM - 3:00 AM
\n
مول العرب، مجمع المطاعم
\n
10:00 AM - 3:00 AM
\n
مول مصر
\n
10:00 AM - 3:00 AM
\n
داخل محطة بنزين توتال ، الطريق الصحراوي
\n
10:00 AM - 3:00 AM
\n
مركز جمجوم ، امام جامعة مصر، الطابق الأرضي
\n
10:00 AM - 3:00 AM
\n
سيتي ستار، برج رقم 5، المحور المركزي، الطابق الاول
\n
10:00 AM - 3:00 AM
\n
ميدان الحصرى، منطقة 2، محطة كالتكس
\n
10:00 AM - 3:00 AM
\n
مدينة الرحاب
\n
مدينة الرحاب، مجمع المطاعم
\n
10:00 AM - 3:00 AM

المقطم
\n
3 شارع تسعة ، ميدان النافورة
\n
10:00 AM - 3:00 AM
\n
\n

جسر السويس
\n
93أ شارع جسر السويس
\n
10:00 AM - 3:00 AM
\n
\n

مدينة الشروق
\n
سكاى بلازا مول
\n
10:00 AM - 3:00 AM
\n
\n

القرية الذكية
\n
داندى مول ، الكيلو28 طريق مصر اسكندرية الصحراوي
\n
10:00 AM - 3:00 AM
    \n</string>

</resources>
