<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.aaaaa.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.aaaaa.ui.offer.OfferFragment"
        android:label="@string/menu_Offer"
        tools:layout="@layout/fragment_offer" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.aaaaa.ui.about.AboutFragment"
        android:label="@string/menu_About"
        tools:layout="@layout/fragment_about" />


    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.aaaaa.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.aaaaa.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>