<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#1D192E"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/font"
                    android:text="@string/aboutText1"
                    android:textColor="@color/red"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/font"
                    android:text="@string/aboutText2"
                    android:textColor="#ffffff"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/font"
                    android:text="@string/aboutText3"
                    android:textColor="@color/red"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/font"
                    android:text="@string/aboutText4"
                    android:textColor="#ffffff"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/font"
                    android:text="@string/aboutText5"
                    android:textColor="@color/red"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/font"
                    android:text="@string/aboutText6"
                    android:textColor="#ffffff"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/font"
                    android:text="@string/aboutText7"
                    android:textColor="@color/red"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/font"
                    android:text="@string/aboutText8"
                    android:textColor="#ffffff"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp" />
            </LinearLayout>
        </ScrollView>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/image" />


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:layout_constraintBottom_toBottomOf="@+id/scrollView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.519"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.13999999"
            app:srcCompat="@drawable/kfc" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>